--- a/resource/KirinMusic.qrc
+++ b/resource/KirinMusic.qrc
@@ -55,5 +55,16 @@
         <file>image/返回.png</file>
         <file>image/伴奏.png</file>
         <file>image/原唱.png</file>
+        <file>image/重唱.png</file>
+        <file>image/结束录制.png</file>
+        <file>background/8.png</file>
+        <file>background/7.png</file>
+        <file>background/6.png</file>
+        <file>background/5.png</file>
+        <file>background/4.png</file>
+        <file>background/3.png</file>
+        <file>background/2.png</file>
+        <file>background/1.png</file>
+        <file>image/skn.png</file>
     </qresource>
 </RCC>
